<resources>
    <string name="app_name">Farm FreshWale</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hint_mobile"><b>Mobile Number</b></string>
    <string name="hint_username"><b>Name</b></string>
    <string name="hint_email"><b>Email Address</b></string>
    <string name="hint_pass1"><b>Password</b></string>
    <string name="hint_pass2"><b>Confirm Password</b></string>
    <string name="hint_referral"><b>Referral Code</b></string>
    <string name="hint_search"><b>Search</b></string>
    <string name="hint_search_area"><b>Search Area</b></string>
    <string name="hint_address"><b>Address</b></string>
    <string name="hint_curr_pass"><b>Current Password</b></string>
    <string name="hint_new_pass"><b>New Password</b></string>
    <string name="hint_conf_pass"><b>Confirm Password</b></string>
    <string name="hint_amount"><b>Enter Amount</b></string>
    <string name="hint_cname"><b>Name</b></string>
    <string name="hint_cmobile"><b>Mobile Number</b></string>
    <string name="hint_cemail"><b>Email</b></string>
    <string name="hint_cmessage"><b>Message</b></string>
    <string name="hint_otp"><b>Provide OTP</b></string>
    <string name="hint_promo"><b>Have a Coupon Code</b></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_cancle">Cancle</string>
    <string name="checkout">Checkout</string>
    <string name="payment">Payment</string>
    <string name="cancelOrder">Cancel Order</string>
    <string name="orderDetails">Order Details</string>
    <string name="orderTrack">Order Track</string>
    <string name="rs">₹</string>
    <string name="notification_channel_id">default</string>

</resources>