<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.ProfileFragments.ChangePassword"
    android:background="@drawable/border">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">

       <TextView
           android:id="@+id/text1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="Change Your Password"
           android:textColor="@color/main_color"
           android:textSize="18sp"
           android:textStyle="bold"
           app:layout_constraintLeft_toLeftOf="parent"
           app:layout_constraintTop_toTopOf="parent" />

       <EditText
           android:id="@+id/current_pass"
           android:layout_width="0dp"
           android:layout_height="50sp"
           android:layout_marginTop="10sp"
           android:background="@drawable/border_edittext"
           android:hint="@string/hint_curr_pass"
           android:paddingLeft="10dp"
           android:textSize="18sp"
           android:inputType="textPassword"
           app:layout_constraintLeft_toLeftOf="parent"
           app:layout_constraintRight_toRightOf="parent"
           app:layout_constraintTop_toBottomOf="@id/text1" />

       <EditText
           android:id="@+id/new_pass"
           android:layout_width="0dp"
           android:layout_height="50sp"
           android:layout_marginTop="10sp"
           android:background="@drawable/border_edittext"
           android:hint="@string/hint_new_pass"
           android:paddingLeft="10dp"
           android:textSize="18sp"
           android:inputType="textPassword"
           app:layout_constraintLeft_toLeftOf="parent"
           app:layout_constraintRight_toRightOf="parent"
           app:layout_constraintTop_toBottomOf="@id/current_pass" />

       <EditText
           android:id="@+id/confirm_pass"
           android:layout_width="0dp"
           android:layout_height="50sp"
           android:layout_marginTop="10sp"
           android:background="@drawable/border_edittext"
           android:hint="@string/hint_conf_pass"
           android:paddingLeft="10dp"
           android:textSize="18sp"
           android:inputType="textPassword"
           app:layout_constraintLeft_toLeftOf="parent"
           app:layout_constraintRight_toRightOf="parent"
           app:layout_constraintTop_toBottomOf="@id/new_pass" />

       <Button
           android:id="@+id/save_pass"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginTop="15sp"
           android:text="Save"
           android:textSize="18sp"
           app:layout_constraintLeft_toLeftOf="parent"
           app:layout_constraintRight_toRightOf="parent"
           app:layout_constraintTop_toBottomOf="@id/confirm_pass" />


   </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>