<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border"
    tools:context=".Register">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Create Your Account"
                android:textColor="@color/main_color"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/username"
                android:layout_width="0dp"
                android:layout_height="50sp"
                android:layout_marginTop="10sp"
                android:background="@drawable/border_edittext"
                android:hint="@string/hint_username"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text1" />

            <EditText
                android:id="@+id/mob_number"
                android:layout_width="0dp"
                android:layout_height="50sp"
                android:layout_marginTop="10sp"
                android:background="@drawable/border_edittext"
                android:hint="@string/hint_mobile"
                android:inputType="number"
                android:paddingLeft="10dp"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/username" />

            <EditText
                android:id="@+id/useremail"
                android:layout_width="0dp"
                android:layout_height="50sp"
                android:layout_marginTop="10sp"
                android:background="@drawable/border_edittext"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mob_number" />

            <!--            <EditText-->
            <!--                android:id="@+id/userpass1"-->
            <!--                android:layout_width="0dp"-->
            <!--                android:layout_height="50sp"-->
            <!--                android:layout_marginTop="10sp"-->
            <!--                android:background="@drawable/border_edittext"-->
            <!--                android:hint="@string/hint_pass1"-->
            <!--                android:inputType="textPassword"-->
            <!--                android:paddingLeft="10dp"-->
            <!--                android:textSize="18sp"-->
            <!--                app:layout_constraintLeft_toLeftOf="parent"-->
            <!--                app:layout_constraintRight_toRightOf="parent"-->
            <!--                app:layout_constraintTop_toBottomOf="@id/useremail" />-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pass_layout1"
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="50sp"
                android:layout_marginTop="10sp"
                app:hintEnabled="false"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/useremail"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userpass1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/border_edittext"
                    android:hint="@string/hint_pass1"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--            <EditText-->
            <!--                android:id="@+id/userpass2"-->
            <!--                android:layout_width="0dp"-->
            <!--                android:layout_height="50sp"-->
            <!--                android:layout_marginTop="10sp"-->
            <!--                android:background="@drawable/border_edittext"-->
            <!--                android:hint="@string/hint_pass2"-->
            <!--                android:inputType="textPassword"-->
            <!--                android:paddingLeft="10dp"-->
            <!--                android:textSize="18sp"-->
            <!--                app:layout_constraintLeft_toLeftOf="parent"-->
            <!--                app:layout_constraintRight_toRightOf="parent"-->
            <!--                app:layout_constraintTop_toBottomOf="@id/pass_layout1" />-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pass_layout2"
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="50sp"
                android:layout_marginTop="10sp"
                app:hintEnabled="false"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pass_layout1"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userpass2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/border_edittext"
                    android:hint="@string/hint_pass2"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:id="@+id/referral"
                android:layout_width="0dp"
                android:layout_height="50sp"
                android:layout_marginTop="10sp"
                android:background="@drawable/border_edittext"
                android:hint="@string/hint_referral"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pass_layout2" />

            <CheckBox
                android:id="@+id/term_policy_check"
                android:layout_width="25sp"
                android:layout_height="25sp"
                android:layout_marginTop="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/referral" />


            <TextView
                android:id="@+id/text3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="10sp"
                android:layout_marginRight="10sp"
                android:text=""
                android:textSize="12sp"
                app:layout_constraintLeft_toRightOf="@id/term_policy_check"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/referral" />

            <Button
                android:id="@+id/sign_up"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:text="Sign Up"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/term_policy_check" />

            <ImageView
                android:id="@+id/or_image"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="10sp"
                android:src="@drawable/ic_or"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sign_up" />

            <Button
                android:id="@+id/nav_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:backgroundTint="#374241"
                android:text="Login"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/or_image" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>